version/2.30/ripscrip/1.1-protocol-and-command-hierarchy.md
# 1.1 Protocol & Command Hierarchy

[◀ Prev: 1.0 Introduction](1.0-introduction.md) · [Contents](README.md) · [Next: 1.2 Math & Coordinates ▶](1.2-math-and-coordinates.md)

This page covers the wire-level shape of the RIPscrip 2.x language: the `!|` line form, the `|` delimiter, the expanded multi-level [command level](../../GLOSSARY.md) hierarchy, escaping and quoting, line continuation, comments and command grouping, the [auto-sense](../../GLOSSARY.md) handshake, and the protocol-level commands that open and close a scene ([RIP_HEADER](#rip_header), [RIP_NO_MORE](#rip_no_more)). It also explains how each command entry in this reference is documented. The number systems ([MegaNums](../../GLOSSARY.md), [UltraNums](../../GLOSSARY.md), [Base Math](../../GLOSSARY.md)) used by command parameters are in [1.2 Math & Coordinates](1.2-math-and-coordinates.md); file-authoring conventions are in [6.0 Writing 2.x .RIP Files](6.0-writing-rip-files.md). The 1.54 record of this material is [1.1 in the v1.54 reference](../../1.54/ripscrip/1.1-protocol-and-command-hierarchy.md); the 2.x syntax is a superset — rules 10 (parameter shortening), 12 (SOH/STX mid-line starts), 14 (quoting host-command characters), 15 (comments) and 16 (corrupt-command recovery) are the 2.x additions.

## RIPscrip Protocol - Syntax and General Structure

RIPscrip is organized into 10 levels of graphical commands (low Level-0 to high Level-9). Level-0 commands are the building blocks of RIPscrip. The basic graphics primitives of the system are all Level-0, including the commands Line, Rectangle, Circle, Color, Font, etc. Each level of RIPscrip gets progressively higher-level in concept. For example, Level-1 commands use Mouse Regions, Icons, and Formatted Text Regions.

The basic syntax rules are as follows:

1. A RIPscrip command line starts at the beginning of a line of text. A RIPscrip command line moved to the middle of a line of text is treated as literal text. This prevents people inserting mischievous things in teleconference messages, or similar pranks. The only exceptions to this rule is stated below under item 6, "continuation of long lines", and item 12 "alternate RIPscrip starting sequences".

2. A RIPscrip command line begins with an exclamation mark `!` (ASCII code 33 decimal).

3. Every RIPscrip command is preceded by the universal RIPscrip delimiter, vertical-bar `|` (ASCII code 124 decimal).

4. Individual RIPscrip commands may be combined on the same line providing they are separated by the vertical bar delimiter. There are some exceptions to this ([RIP_ENTER_BLOCK_MODE](5.5-file-transfer-and-queries.md#rip_enter_block_mode), and a few others). See individual command descriptions for exceptions. _(v2.A1)_

5. RIPscrip commands or command lines may be split across multiple lines with a backslash `\` (ASCII code 92 decimal) just before each split. This helps RIPscrip commands conform to right margins and escape word wrapping.

   An example:

   ```text
   !|c02|L02030405|P0901020102010201020102\
   0102010201020102
   ```

6. RIPscrip must allow for normal text to be intermixed with RIPscrip commands. If unrecognized text appears after a RIPscrip command, on the same line, the text is ignored (the command is not ignored). A line that does not begin with `!|` is considered raw text and is routed to the TTY text window (see "8" below).

7. RIPscrip makes provisions for multiple Graphical Windows and multiple Text Windows. A Graphical Window is where all RIPscrip graphics appear. A Text Window is where raw text appears. Raw Text includes ANSI color and cursor movement codes (a subset of VT-100 terminal emulation), and possibly other terminal emulations like VT-100, VT-102, VT-220, etc.

8. The vertical bar (`|`) of a RIPscrip command can be followed by a level number. If the 1st character after (`|`) is a numeric digit (1-9), then that's the RIPscrip Command Level. If the very 1st character is NOT a digit 1-9, then it is the command type character and the command is a Level-0 command. If the 1st character is a digit 1-9, and the second character is also a digit, then that defines a sub-level of a RIPscrip level. For example:

   ```text
         !|L     RIPscrip Level-0 Command "L"
        !|1L     RIPscrip Level-1 Command "L"
       !|15L     RIPscrip Level-1, sub-level 5 Command "L"
   ```

   Each of the above examples are unique commands not to be confused with each other. You may continue the sub-levels up to a maximum level of 9 (e.g., `!|123456789<cmd>`").

9. Every RIPscrip command includes a command type character. In Level-0 commands, this character immediately follows the vertical bar. At all other levels, it follows the level digits. The command type character may be any of the following characters:

   ```text
   ABCDEFGHIJKLMNOPQRSTUVWXYZ
   abcdefghijklmnopqrstuvwxyz
   @#$&*()[]{}<>:;'",.?-_=+!
   ```

10. Following the command type character are 0 or more parameters. If the command requires a text-string, it is always the LAST parameter. Numeric parameters DO NOT have any delimiters (commas, dashes, spaces, etc.). A variable width numeric parameter may be used as the last parameter. This allows for maximum efficiency.

    If a RIPscrip command does not have a string parameter, but does have numeric parameters, the last parameter may be shortened to get a bit more efficiency out of it. If the last parameter is more than one digit long and the left-most digits are zeros, they may be omitted. At least one digit must remain though after all of the shortening is done (eg, "0001" can be shortened to "1" but "0000" cannot be shortened to "", it can only be shortened to "0"). _(v2.A3)_

    For example, the [RIP_COLOR](2.0-color-modes-and-palettes.md#rip_color) command, used to set the current drawing color, requires one parameter - a color number. If we were going to set color 1 (usually dark blue), then the command would appear formally as follows: _(v2.A3)_

    ```text
    !|c01
    ```

    Under this shortening clause, you could omit the "0" and make the command appear like this: _(v2.A3)_

    ```text
    !|c1
    ```

    This allows you to shave one byte off of the command. If you were trying to set color number zero (normally black), then you could still shorten the parameter, but you still have to leave at least one digit there (0), so the command would appear like this: _(v2.A3)_

    ```text
    !|c0
    ```

    There is an additional optimization that can be used for commands that have no string parameter, and have a reserved parameter as the LAST parameter for that command. In this case, the reserved parameter may be omitted completely, and the value should be assumed to be zero (`0'). Please take note that the previous paragraphs still apply! You can omit the reserved parameter AND shorten the last transmitted parameter so as to squeeze out as many unnecessary characters from the command as possible. _(v2.A2)_

    Numbers are normally represented in base-36 (unless altered by a RIPscrip command). This compacts numbers down to roughly 3/5 of their decimal form. This numbering system, technically called "Hexa-Tri-Decimal" or "MegaNums" is unlike Hexadecimal which uses 0-9 and A-F. MegaNums take advantage of the entire alphabet, using characters 0-9 and A-Z. _(v2.A0)_

    See the next section about Base Math variations. _(v2.A0)_

11. An exclamation mark (`!`) or vertical bar (`|`) character can appear in a RIPscrip text parameter by preceding it with a backslash (`\`). This is known as "quoting" a special character. A literal backslash is represented with a double-backslash (`\\`). Also, in some situations you need to quote specific characters so that they are not misinterpretted. For example, in a button host string, the characters `[`, `]`, `(`, and `$` are used as special host command characters and will need to be quoted (eg, `\[`, `\]`, `\(` and `\$` respectively). See rule #14 below for more details on quoting these special sequences. _(v2.A3)_

12. A RIPscrip sequence CAN begin in a column other than column #0, if the exclamation mark prefix is replaced with a Ctrl-A (Start Of Header [SOH] - ASCII character 1) character, or Ctrl-B (STX - ASCII character 2) character. Since 99.9% of all BBS' do not allow users to enter most control characters, users will be unable to begin RIPscrip sequences in the middle of a command line. Only the host should be able to do this. This prevents people from cluttering teleconference, or other areas of a host with spurious RIPscrip sequences.

    Let's take an example, where we have a piece of raw text and then a RIPscrip command immediately following the text before the carriage return (in this example `<STX>` stands for the STX character): _(v2.A3)_

    ```text
    This is raw text<STX>|c01|@1010hello world
    ```

    In the above example, the text "This is raw text" would be sent to the active text window, then the RIPscrip sequences would be processed - set the color to blue (01), then print the text "hello world" on the screen at (10,10) in meganums or (36,36) in decimal. _(v2.A3)_

13. If the last couple of bytes on a RIPscrip text line are backslashes, special care must be taken to make sure that they are not interpreted as a line-continuation. If a literal backslash is desired as the last position on the line, it must be specified as a double-backslash (eg, `\\`). If a line-continuation is used then there would have to be three backslashes used on the line as in the following example: _(v1.54)_

    ```text
    !|@2233this is a text line with a literal \\\
    used in the message
    ```

    This would text output at (22,33) [meganum] the message: _(v1.54)_

    ```text
    this is a text line with a literal \used in the message
    ```

14. Some character sequences in text parameter strings can be misinterpreted as RIPscrip command sequences (eg, `$`, `<>`, `((`, `))`, `[`, `]`, `[]`, etc). To avoid syntax confusion these sequences can be "escaped" to indicate that they are actually literal sequences, not to be confused with a RIPscrip command sequence identifier. For example, the sequence: _(v2.A1)_

    ```text
    $Name$
    ```

    would normally be interpreted as a RIPscrip text variable that requires the user's response. If however, you wanted this sequence to be interpretted as literal text, you should perform the following escape sequences:

    ```text
    \$Name\$
    ```

    This makes it so a RIPscrip terminal doesn't misinterpret the dollar signs as text variable delimiters.

15. Extraneous information. If too much data is encountered for a particular RIPscrip command, or too little information is found (aside from a short last parameter) then the command is considered "hopelessly corrupted" and discarded. The RIPscrip parser should synchronize to the next vertical bar delimiter to begin the next command. _(v2.A1)_

## Description of RIPscrip Command Levels

_Added in RIPscrip v2.A1._

As previously described, RIPscrip is composed of ten different levels of commands. The distribution of commands over different levels is done in a rather organized fashion based on command type. Each level of command in general, is progressively higher level in concept. For example, level 0 commands are the most basic building blocks of RIPscrip (eg, graphical primitives, protocol setup, etc). Level one commands are simple user interface objects. Level 2 commands are higher level still in that they deal with context swapping issues. At the highest level, level-9, we deal with binary transfer modes like file transfer protocols, etc. A more formal definition of the currently used levels are:

| Level | Description |
| --- | --- |
| 0 | Lowest-level RIPscrip primitives. Simple graphical drawing primitives, low-level RIPscrip protocol mode settings, etc. |
| 1 | Simple user interface objects (buttons, mouse fields, clipboard slots, formatted text regions). This level consolidates one or more simple building blocks from level 0 and also introduces more abstract user interface objects (eg, mouse fields). |
| 2 | Basic context switching information (switching styles, and other window or context senstive commands. |
| 3 | Basic time-related commands (baud rate emulation and delay commands). |
| 4 | Open for future development |
| 5 | Open for future development |
| 6 | Open for future development |
| 7 | Open for future development |
| 8 | Open for future development |
| 9 | Binary related data transfer functions (ie, block protocol modes, UU-Encoding, etc). |

## ANSI Sequences (Auto-Sensing)

RIPscrip predominantly uses non-ANSI command sequences. In a couple of situations though, an ANSI-like sequence is allowed to perform a specific function. There are currently four separate escape sequences defined in the RIPscrip protocol to perform various actions. They are as follows:

`ESC[!` — Query RIPscrip version number. RIPterm will respond with `RIPSCRIPxxyyvs` where "xx" is equal to the major version number (zero padded), "yy" is equal to the minor version number (zero padded), "v" is the vendor code of the terminal program (see below), and "s" is the vendor's sub-version code for their software. For v1.54, the returned sequence for RIPterm (Vendor Code "1") would be `RIPSCRIP015410`. Another example, v1.23 with a Vendor Code of "2" and a sub-revision code of "5" would return `RIPSCRIP012325`. _(v1.54)_

Valid Vendor Codes are:

| CODE | VENDOR                                              |
| ---- | --------------------------------------------------- |
| 0    | Generic RIPscrip terminal (vendor unknown)          |
| 1    | RIPterm (from TeleGrafix Communications)            |
| 2    | Qmodem Pro (from Mustang Software, Inc)             |
| 3    | deltaComm Development (Telix) _(v2.A1)_             |
| 4    | Qmodem Pro for Windows (Mustang Software) _(v2.A1)_ |

This ANSI sequence is often used for "Auto-Sensing" if a RIPscrip terminal exists on the remote end of the connection. If a non-RIPscrip terminal receives this ANSI sequence, it will ignore it. _(v1.54)_

> **NOTE:** This method of vendor determination is obsolete in RIPscrip 2.0. See the section Pre-Defined Text variable for Vendor specific text variables which can be used more generically to determine a specific terminal vendor (ie, `$TERMINFO$()`). _(v2.A1, revised v2.A4)_
>
> You still use this escape sequences to detect RIPscrip capability, but to determine the specific terminal program or manufacturer, use the `$TERMINFO()$` text variable. To determine specific capabilities of the terminal, use the `$IFS()$` text variable (Is Function Supported). To determine the current language that the terminal is running in, use the `$LANGUAGE$` text variable (see the text variable section later for more details). _(v2.A3)_

> **Editor's note:** Every shipping 2.x-generation RIPterm binary — Professional 2.0, 2.20.01, and 2.30 — carries the same literal auto-sense response string `RIPSCRIP020000`: version 02.00 with the trailing vendor/sub-version digits zeroed (RIPTERM.EXE strings from all three recovered installs; see the provenance table in [CONTRIBUTING.md](../../../CONTRIBUTING.md)). The reported language level never advanced past 2.00.00 through the end of the RIPterm line in October 1997, even as the product versions did; RIPterm 2.30's documentation likewise states it "supports the RIPscrip 2.0 language fully" (RIPTERM.FAQ v1.7).

`ESC[0!` — Same as `ESC [ !` (see above)

`ESC[1!` — Disables all RIPscrip processing. Any RIPscrip sequences are interpreted as raw text.

`ESC[2!` — Enabled RIPscrip processing. Any RIPscrip sequences will be parsed and processed.

## How commands are documented

The chapters of this reference detail the RIPscrip command set (the consolidated index is [9.0 Command Reference](9.0-command-reference.md)). Each command has these aspects:

- **SYMBOL** — the symbolic constant that is referenced in RIPscrip documents. This is the universal name for the command. _(v2.A3)_

- **FUNCTION** — A short description of the command.

- **LEVEL** — The Command Level. Sub-levels (if any) are represented with decimal points (eg, 1.3.5 for Level-1, Sub-level 3, Sub-Sub-level 5). This is for discussion purposes only. The decimal points are never part of the actual command.

- **COMMAND** — The character identifying the command

- **ARGUMENTS** — The arguments or parameters for the command. Commands that do not require any parameters after the command type character are shown here as "\<none\>". Each parameter is shown in the order it appears in the command, and is represented by a name. If a parameter is numeric, it is followed by a width specifier indicating how many meganum or ultranum digits the parameter consists of (e.g., ":2" means a 2-digit number, or a value between 0 and 1295 for meganums, or 0 and 4095 for ultranums). If a parameter does not have a width specifier, it is by default a text parameter, and should be the last parameter of the command.

  If a command is variable length (see [POLYGON](2.3-shapes-and-fills.md#rip_polygon)), then it will appear with an ellipe (...), meaning that the command repeats the specific parameters a variable number of times. _(v2.A2)_

  If the parameter is a variable-width coordinate that can be set by the [RIP_SET_COORDINATE_SIZE](1.2-math-and-coordinates.md#rip_set_coordinate_size), or via the [RIP_HEADER](#rip_header) commands, then the parameter will be followed by a coordinate specifier (e.g., ":XY" means that the parameter is a variable-width coordinate). _(v2.A2, revised v2.A3)_

  If the parameter is a color parameter whose format is determined by the [RIP_SET_COLOR_MODE](2.0-color-modes-and-palettes.md#rip_set_color_mode) command, (ie, the parameter switches between "color mapping mode" or "direct RGB encoding" mode), then a color mode specifier will come after the parameter name (e.g., ":CM" indicates this parameter uses the current color mode). _(v2.A3)_

  Some commands do not allow color parameters to switch modes based on RIP_SET_COLOR_MODE. These exceptional commands document these exceptions and the :CM specifier will not be present. _(v2.A3)_

- **FORMAT** — This represents the format of the command, with the starting `!|`, the level digits, the command type character, and the parameter list, with the parameter names in angle brackets. (These parameters are spaced apart, but these spaces never appear in the physical commands.)

- **EXAMPLE** — An actual example of the RIPscrip command.

- **DRAW COLOR** — If YES, then this command uses or affects the current Drawing Color.

- **BACK COLOR** — If YES, then this command uses (or affects) the current background pen drawing color. _(v2.A1)_

- **LINE STYLE** — If YES, then this command uses or affects the current Line Style Pattern.

- **FILL COLOR** — If YES, then this command uses or affects the current Fill Color.

- **FILL PATRN** — If YES, then this command uses or affects the current Fill Pattern.

- **WRITE MODE** — If YES, then this command will take advantage of the current Write Mode (eg, COPY, or XOR).

- **FONT STYLE** — If YES, then this command uses or affects the current Font Style/size/orientation. _(v2.A3)_

- **VIEWPORT** — If YES, then this command adheres to the graphical viewport (draws inside it). Any RIPscrip command that adheres to the graphical viewport will be drawn (when received) only if the viewport is activated. If the viewport is deactivated, then the command is parsed, but completely ignored. _(v1.54, revised v2.A4)_

- **USES PORT** — If YES, then this command adheres to, is affected by, or modifies the definition of a [port](7.0-drawing-ports.md). _(v2.A3)_

- **BASE MATH** — Indicates which base math this command responds to. The possible settings are N/A (does not apply), Meganums (uses meganums ONLY), Ultranums (uses Ultranums ONLY), and Current (uses current base math setting as set by either RIP_HEADER or [RIP_SET_BASE_MATH](1.2-math-and-coordinates.md#rip_set_base_math)). _(v2.A2)_

## RIP_HEADER

_Added in RIPscrip v2.A1._

_Header command for subsequent RIPscrip sequence_

|               |                            |
| ------------- | -------------------------- |
| **Level**     | 0                          |
| **Command**   | `h`                        |
| **Arguments** | `revision:2 flags:4 res:2` |

**Format:** `!|h <flags> <revision> <res>` **Example:** `!|h010A0100`

**Attributes used:** Port, Base Math (Ultranums only)

This command was introduced in RIPscrip 2.0. It is specifically designed with two purposes in mind. First, it is defined to provide a consistent method for determining the revision of RIPscrip that is to follow in subsequent RIPscrip code (up to a [RIP_NO_MORE](#rip_no_more) command). Second, it provides a way of performing many different kinds of reset operations (if any) in one command - much more flexible than the older [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) command. This command has the ability to set many states and situations for subsequent RIPscrip code (whether MegaNums are to be used, or UltraNums, what gets reset and what doesn't, etc).

The `<revision>` code of this command defines the revision of RIPscrip code that is to follow. The valid defined revisions are as follows:

| Revision | Description           |
| -------- | --------------------- |
| 00       | RIPscrip 1.54.00 code |
| 01       | RIPscrip 2.00.00 code |

The real heart of this command is the `<flags>` parameter. This field defines all of the attributes of the header command other then the revision field. The possible values which may be combined in this parameter (OR'ed together) are as follows:

| Value | Description |
| --- | --- |
| 0 | Do nothing |
| 1 | Use MegaNums for subsequent RIPscrip code |
| 2 * | Use UltraNums for subsequent RIPscrip code |
| 4 * | Auto-set world coordinate frame |
| 8 | Set world frame to 640x350 (backward compatible mode). NOTE: This flag should be used in revision "00" code. |
| 16 | Perform a hard reset - this resets everything. This includes clearing all data backup area, even if entries are protected. The entry is protected, then cleared. |
| 32 * | This performs a soft reset. The screen is cleared, all viewports are reset and viewport slot 0 is made full screen, text windows are deleted and text window 0 is made full screen. All resident queries are deleted, graphical style slots are erased as are the button style slots. This is identical in nature to the RIP_RESET_WINDOWS. |
| 64 | Clears port data table |
| 128 | Clears resident queries only |
| 256 | Clears mouse/button definitions only |
| 512 | Clears all data save slots and resets stack pointers |
| 1024 | Clears all base save areas |
| 2048 | Clears and stops any playing sound/music |
| 4096 | Clears the screen to background color (usually black) |
| 8192 | Resets all viewports of all drawing ports to the full size of their respective ports (no erasing performed). |
| 16384 | Clears all text window data table entries and makes entry 0 full screen in default text (no window clearing performed) |
| 32768 | Clears all graphical style data table entries |
| 65536 | Clears all button style data table entries |
| 131072 | Resets all palette data table entries to defaults |
| 262144 | All existing viewports are erased. If combined with flag 8192, then this is done first, then flag 8192 is executed. |
| 524288 | All existing text windows are erased. If combined with flag 16384, then this is done first, then flag 16384 is executed. |
| 1048576 * | Disables all mouse/keyboard input (discards) until a RIP_NO_MORE command is encountered thus signifying the end of a RIPscrip sequence. This prevents the user from accidentally interrupting the data stream with keyboard activity. The mouse cursor should be changed to something like an hourglass or disabled entirely. If no RIP_NO_MORE is found and no RIPscrip or raw text data is being received, then a RIP_NO_MORE should be assumed after some suitable timeout (up to the developer's discretion). |

**NOTE:** Items marked with a `*` are recommended defaults.

As you can see, the `<flags>` parameter allows you to reset only segments of things that you want to reset giving you considerable flexibility in starting off RIPscrip scenes.

Most of the flag options are fairly self-explanatory. Some mention should be made to several of them. Note that the flags described above are grouped into logically related flag groups. Flags 1 and 2 are mutually exlusive meaning only "1" or "2" may be used, but not both. Choosing either flag 1 or 2 resets coordinate sizes to 2 bytes.

Flag 4 requires some explanation. Auto-setting the world coordinate frame (WCF) will auto-set the world coordinate frame to a set of high-resolution world coordinates. The exact choices of coordinates chosen depend on whether you specified UltraNums or MegaNums. If you specify flag 4, then you must specify either flag 1 or flag 2 to determine which base math to use. MegaNums set the width of the world coordinate frame to 1280, and the WCF height to 960. This provides for a square world frame pixels. If UltraNums are used, then the width of the world frame is set to 4096 and the height is set to 3072. Again, this provides for square world frame pixels. If you physically need a larger world frame then you either need to alter the base math setting explicitly or alter the X/Y coordinate parameter size (see the next few commands).

Most video displays have a 4:3 width to height pixel ratio. For example, 640x480 is 4:3, 1024x768 is 4:3, etc. Note that 1280x1024 is NOT a 4:3 ratio (the 4:3 ratio for 1280 would be 1280x960.) _(v2.A2)_

The Hard Reset option (flag 16) will perform a complete reset of the RIPscrip environment. This is equivalent to choosing flags 64 through 131072. In effect, this clears everything including data save slots and the base save areas.

The Soft Reset option (flag 32) will perform a reset that is identical in nature to the RIP_RESET_WINDOWS reset. This is equivalent to choosing flags 1, 8, 64, 128, and 2048 through 131072. This doesn't delete any data save slots or base save areas, doesn't intentionally affect the world frame except that it sets it to 640x350, and chooses MegaNums as the numbers of choice.

**NOTE:** This command ALWAYS sets the mouse cursor back to the default arrow pointer unless the "disable mouse input" flag is used whereas the mouse will be temporarily changed to an hourglass or disabled entirely until a RIP_NO_MORE. After this, then the pointer will be reset back to an arrow. See [RIP_SET_MOUSE_CURSOR](4.2-mouse-fields-and-pointer.md#rip_set_mouse_cursor) for details.

## RIP_NO_MORE

_End of RIPscrip Scene_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `#`      |
| **Arguments** | \<none\> |

**Format:** `!|#` **Example:** `!|#`

**Attributes used:** none

This command indicates that RIPscrip commands are complete. This allows the terminal program to activate Mouse Regions, or respond to queued up Mouse Clicks without disturbing the natural flow of the script transmission.

For noise-immunity, the Host should transmit three or more RIP_NO_MORE command consecutively to make sure the message gets to the terminal. The terminal should also time-out if no data is received for a while, and assume RIP_NO_MORE.

The actual duration of the "time-out" is entirely up to the implementor of their terminal program. A good recommended setting would be at least an entire second or more after the receipt of the last RIPscrip command. Raw ASCII/ANSI text does not contribute to the time-out in any way. Only an actual RIPscrip command could cause the time-out counter to be reset (thus starting the time-out countdown all over again). Timing-out is not a pre-requisite to supporting RIPscrip. It is a highly desirable feature to do this, but it is not required. _(v1.54)_

This command also re-activates user input previously disabled with a [RIP_HEADER](#rip_header) command. This is useful to prevent the user from clicking on buttons before the scene is completely drawn. See the RIP_HEADER command for more details on this mode of operation. _(v2.A1)_

## RIP_COMMENT

_Added in RIPscrip v2.A2._

_Put in a comment as part of a RIPscrip sequence_

|               |             |
| ------------- | ----------- |
| **Level**     | 0           |
| **Command**   | `!`         |
| **Arguments** | `string...` |

**Format:** `!|!This is a comment` **Example:** `!|!Everything from this point on is ignored`

**Attributes used:** Base Math (N/A)

A comment may be embedded inside a RIPscrip file. A comment is one line or longer in length. A comment is a special case of a RIPscrip command letter. In this case, it is the command letter "!". If a "!" is encountered right after a "!|", a "SOH |" or an "STX |" sequence, then the remainder of the command line is a comment. Comments may be line-continued with backslashes just like regular RIPscrip commands can. Some examples of comments might be:

```text
!|!This is a comment

!|c0F|!Set the color to white|c00|!Set the color to black

!|c0F|!this is a very long, continued\
comment line.  Line-continued comments\
adhere to standard RIPscrip line continuation rules
```

Note that the second example shows a comment starting after a legitimate RIPscrip command (set color). This is valid.

The RIP_COMMENT is treated exactly like any other RIPscrip command for the purposes of parsing RIPscrip commands, EXCEPT that the string is explicitly ignored for [text variables](5.1-text-variables.md). Any use of `|` will be interpreted as the beginning of the next command, and `\` will interpreted as a line continuation. No other characters need be escaped out.

## RIP_GROUP_BEGIN

_Added in RIPscrip v2.A2._

_Start a grouping of RIPscrip commands_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `(`      |
| **Arguments** | \<none\> |

**Format:** `!|(` **Example:** `!|(`

**Attributes used:** none

This command has one special usage, that is to group blocks of commands together into logical groupings. This has no functional use to a terminal program, but to a paint program, it can be used to perform block moves of commands from one area in a scene to another. In order to accomodate this, a standardized method of doing group definitions is being created.

To specify a command grouping, specify the commands like this:

```text
!|(

  ...
  ... RIPscrip commands
  ...

!|)
```

When putting RIPscrip data files online on a host, you would typically want to remove groupings for efficiency, although this is not required. A terminal program should just ignore RIP_GROUP_BEGIN and [RIP_GROUP_END](#rip_group_end) commands, at it has no conceivable use for the information at this time.

Also note that a group may consist of several groups and commands. In other words, groups may be nested inside of each other for the purpose of bundling them together.

**NOTE:** Any currently active group definitions are "closed" when a [RIP_NO_MORE](#rip_no_more) command is encountered in a paint program or some kind of conversion utility that uses groups. _(v2.A3)_

## RIP_GROUP_END

_Added in RIPscrip v2.A2._

_End a grouping of RIPscrip commands_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `)`      |
| **Arguments** | \<none\> |

**Format:** `!|)` **Example:** `!|)`

**Attributes used:** none

This command ends a group of RIPscrip commands. See [RIP_GROUP_BEGIN](#rip_group_begin) for a detailed explanation.

---

[◀ Prev: 1.0 Introduction](1.0-introduction.md) · [Contents](README.md) · [Next: 1.2 Math & Coordinates ▶](1.2-math-and-coordinates.md)
