version/3.0/ripscrip/1.1-protocol-and-command-hierarchy.md
# 1.1 Protocol & Command Hierarchy

[◀ Prev: 1.0 Introduction](1.0-introduction.md) · [Contents](README.md) · [Next: 1.2 Math & Coordinates ▶](1.2-math-and-coordinates.md)

_Reconstructed edition - every claim carries an evidence tag; see [Contents](README.md) for the legend._

The wire-level form of a RIPscrip 3.x command - the `!|` line prefix, the `|` delimiter, the ten [command levels](../../GLOSSARY.md), escaping and line continuation - plus the [auto-sense](../../GLOSSARY.md) handshake and its 3.x-era `RIPSCRIP03000…` replies, the scene header segments the 3.0 driver formalizes, and the protocol commands that open and close a scene.

[Syntax & general structure](#ripscrip-protocol---syntax-and-general-structure) · [Parser-exact behavior](#command-syntax---parser-exact-behavior) · [Command levels](#description-of-ripscrip-command-levels) · [ANSI auto-sensing](#ansi-sequences-auto-sensing) · [Scene header segments](#scene-header-segments) · [Wire-format observations](#wire-format-observations-from-the-corpus) · [Annotated wire examples](#annotated-wire-examples) · [How commands are documented](#how-commands-are-documented) · protocol commands: [RIP_HEADER](#rip_header), [RIP_NO_MORE](#rip_no_more), [RIP_COMMENT](#rip_comment), [RIP_GROUP_BEGIN](#rip_group_begin), [RIP_GROUP_END](#rip_group_end)

_The 3.x syntax is the 2.0 syntax verbatim - the inherited rules below are the published 2.00a4 language definition - overlaid here with the byte-exact behavior of the shipping 3.0.7 driver (observed through the RIPtel corpus) and SyncTERM's 3.0 parser._

## RIPscrip Protocol - Syntax and General Structure

_Evidence: 2.00a4; corpus; SyncTERM (ripper.c:18516-18608)._

RIPscrip is organized into 10 levels of graphical commands (low Level-0 to high Level-9). Level-0 commands are the building blocks of RIPscrip. The basic graphics primitives of the system are all Level-0, including the commands Line, Rectangle, Circle, Color, Font, etc. Each level of RIPscrip gets progressively higher-level in concept. For example, Level-1 commands use Mouse Regions, Icons, and Formatted Text Regions.

The basic syntax rules are as follows:

1. A RIPscrip command line starts at the beginning of a line of text. A RIPscrip command line moved to the middle of a line of text is treated as literal text. This prevents people inserting mischievous things in teleconference messages, or similar pranks. The only exceptions to this rule is stated below under item 6, "continuation of long lines", and item 12 "alternate RIPscrip starting sequences".

2. A RIPscrip command line begins with an exclamation mark `!` (ASCII code 33 decimal).

3. Every RIPscrip command is preceded by the universal RIPscrip delimiter, vertical-bar `|` (ASCII code 124 decimal).

4. Individual RIPscrip commands may be combined on the same line providing they are separated by the vertical bar delimiter. There are some exceptions to this ([RIP_ENTER_BLOCK_MODE](5.5-file-transfer-and-queries.md#rip_enter_block_mode), and a few others). See individual command descriptions for exceptions. _(v2.A1)_

5. RIPscrip commands or command lines may be split across multiple lines with a backslash `\` (ASCII code 92 decimal) just before each split. This helps RIPscrip commands conform to right margins and escape word wrapping.

   An example:

   ```text
   !|c02|L02030405|P0901020102010201020102\
   0102010201020102
   ```

6. RIPscrip must allow for normal text to be intermixed with RIPscrip commands. If unrecognized text appears after a RIPscrip command, on the same line, the text is ignored (the command is not ignored). A line that does not begin with `!|` is considered raw text and is routed to the TTY text window (see "8" below).

7. RIPscrip makes provisions for multiple Graphical Windows and multiple Text Windows. A Graphical Window is where all RIPscrip graphics appear. A Text Window is where raw text appears. Raw Text includes ANSI color and cursor movement codes (a subset of VT-100 terminal emulation), and possibly other terminal emulations like VT-100, VT-102, VT-220, etc.

8. The vertical bar (`|`) of a RIPscrip command can be followed by a level number. If the 1st character after (`|`) is a numeric digit (1-9), then that's the RIPscrip Command Level. If the very 1st character is NOT a digit 1-9, then it is the command type character and the command is a Level-0 command. If the 1st character is a digit 1-9, and the second character is also a digit, then that defines a sub-level of a RIPscrip level. For example:

   ```text
         !|L     RIPscrip Level-0 Command "L"
        !|1L     RIPscrip Level-1 Command "L"
       !|15L     RIPscrip Level-1, sub-level 5 Command "L"
   ```

   Each of the above examples are unique commands not to be confused with each other. You may continue the sub-levels up to a maximum level of 9 (e.g., `!|123456789<cmd>`").

9. Every RIPscrip command includes a command type character. In Level-0 commands, this character immediately follows the vertical bar. At all other levels, it follows the level digits. The command type character may be any of the following characters:

   ```text
   ABCDEFGHIJKLMNOPQRSTUVWXYZ
   abcdefghijklmnopqrstuvwxyz
   @#$&*()[]{}<>:;'",.?-_=+!
   ```

10. Following the command type character are 0 or more parameters. If the command requires a text-string, it is always the LAST parameter. Numeric parameters DO NOT have any delimiters (commas, dashes, spaces, etc.). A variable width numeric parameter may be used as the last parameter. This allows for maximum efficiency.

    If a RIPscrip command does not have a string parameter, but does have numeric parameters, the last parameter may be shortened to get a bit more efficiency out of it. If the last parameter is more than one digit long and the left-most digits are zeros, they may be omitted. At least one digit must remain though after all of the shortening is done (eg, "0001" can be shortened to "1" but "0000" cannot be shortened to "", it can only be shortened to "0"). _(v2.A3)_

    For example, the [RIP_COLOR](2.0-color-modes-and-palettes.md#rip_color) command, used to set the current drawing color, requires one parameter - a color number. If we were going to set color 1 (usually dark blue), then the command would appear formally as follows: _(v2.A3)_

    ```text
    !|c01
    ```

    Under this shortening clause, you could omit the "0" and make the command appear like this: _(v2.A3)_

    ```text
    !|c1
    ```

    This allows you to shave one byte off of the command. If you were trying to set color number zero (normally black), then you could still shorten the parameter, but you still have to leave at least one digit there (0), so the command would appear like this: _(v2.A3)_

    ```text
    !|c0
    ```

    There is an additional optimization that can be used for commands that have no string parameter, and have a reserved parameter as the LAST parameter for that command. In this case, the reserved parameter may be omitted completely, and the value should be assumed to be zero (`0'). Please take note that the previous paragraphs still apply! You can omit the reserved parameter AND shorten the last transmitted parameter so as to squeeze out as many unnecessary characters from the command as possible. _(v2.A2)_

    Numbers are normally represented in base-36 (unless altered by a RIPscrip command). This compacts numbers down to roughly 3/5 of their decimal form. This numbering system, technically called "Hexa-Tri-Decimal" or "MegaNums" is unlike Hexadecimal which uses 0-9 and A-F. MegaNums take advantage of the entire alphabet, using characters 0-9 and A-Z. _(v2.A0)_

    See [1.2 Math & Coordinates](1.2-math-and-coordinates.md) about Base Math variations. _(v2.A0)_

11. An exclamation mark (`!`) or vertical bar (`|`) character can appear in a RIPscrip text parameter by preceding it with a backslash (`\`). This is known as "quoting" a special character. A literal backslash is represented with a double-backslash (`\\`). Also, in some situations you need to quote specific characters so that they are not misinterpretted. For example, in a button host string, the characters `[`, `]`, `(`, and `$` are used as special host command characters and will need to be quoted (eg, `\[`, `\]`, `\(` and `\$` respectively). See rule #14 below for more details on quoting these special sequences. _(v2.A3)_

12. A RIPscrip sequence CAN begin in a column other than column #0, if the exclamation mark prefix is replaced with a Ctrl-A (Start Of Header [SOH] - ASCII character 1) character, or Ctrl-B (STX - ASCII character 2) character. Since 99.9% of all BBS' do not allow users to enter most control characters, users will be unable to begin RIPscrip sequences in the middle of a command line. Only the host should be able to do this. This prevents people from cluttering teleconference, or other areas of a host with spurious RIPscrip sequences.

    Let's take an example, where we have a piece of raw text and then a RIPscrip command immediately following the text before the carriage return (in this example `<STX>` stands for the STX character): _(v2.A3)_

    ```text
    This is raw text<STX>|c01|@1010hello world
    ```

    In the above example, the text "This is raw text" would be sent to the active text window, then the RIPscrip sequences would be processed - set the color to blue (01), then print the text "hello world" on the screen at (10,10) in meganums or (36,36) in decimal. _(v2.A3)_

13. If the last couple of bytes on a RIPscrip text line are backslashes, special care must be taken to make sure that they are not interpreted as a line-continuation. If a literal backslash is desired as the last position on the line, it must be specified as a double-backslash (eg, `\\`). If a line-continuation is used then there would have to be three backslashes used on the line as in the following example: _(v1.54)_

    ```text
    !|@2233this is a text line with a literal \\\
    used in the message
    ```

    This would text output at (22,33) [meganum] the message: _(v1.54)_

    ```text
    this is a text line with a literal \used in the message
    ```

14. Some character sequences in text parameter strings can be misinterpreted as RIPscrip command sequences (eg, `$`, `<>`, `((`, `))`, `[`, `]`, `[]`, etc). To avoid syntax confusion these sequences can be "escaped" to indicate that they are actually literal sequences, not to be confused with a RIPscrip command sequence identifier. For example, the sequence: _(v2.A1)_

    ```text
    $Name$
    ```

    would normally be interpreted as a RIPscrip text variable that requires the user's response. If however, you wanted this sequence to be interpretted as literal text, you should perform the following escape sequences:

    ```text
    \$Name\$
    ```

    This makes it so a RIPscrip terminal doesn't misinterpret the dollar signs as text variable delimiters.

15. Extraneous information. If too much data is encountered for a particular RIPscrip command, or too little information is found (aside from a short last parameter) then the command is considered "hopelessly corrupted" and discarded. The RIPscrip parser should synchronize to the next vertical bar delimiter to begin the next command. _(v2.A1)_

## Command Syntax - Parser-Exact Behavior

_Evidence: 2.00a4; SyncTERM; corpus._

The rules above are the published language definition. The subsections below overlay the byte-exact behavior of SyncTERM's 3.0 parser (`cb_feed`, ripper.c:18516-18608) and the shipping driver's observed tolerance in the RIPtel corpus - the precision an implementer or a careful author needs.

### Introducers

_Evidence: 2.00a4 rules 1-2, 12; SyncTERM (ripper.c:18189-18202)._

Three bytes can begin a RIP command sequence:

- **`!`** (exclamation mark, 33) - the standard introducer, valid **only at the beginning of a line**. SyncTERM implements "beginning of line" precisely: the previously emitted byte must be NUL, CR, LF, or VT (ripper.c:18198-18200), _or_ the text cursor must already sit at column 1 - e.g. placed there by an ANSI cursor-position sequence (ripper.c:18201, rationale comment 18180-18188). The mid-line restriction exists so users can't inject RIP sequences into teleconference text.
- **SOH** (Ctrl-A, `0x01`) and **STX** (Ctrl-B, `0x02`) - accepted **anywhere** in the stream (ripper.c:18196-18197). Since BBSes strip control characters from user input, only the host can start a mid-line sequence.

An introducer immediately preceded by `\` is escaped into literal text (ripper.c:18194-18195). Every introducer must be followed by **`|`** (vertical bar, 124) to form a command header; if the next byte is anything else, the parser takes the **"un-rip" fallback** (ripper.c:18540-18554): both the bogus introducer and the following byte are re-emitted to the text window and parsing resets - stray `!` characters in ordinary text render normally.

### Levels and Sublevels

_Evidence: 2.00a4 rule 8; SyncTERM (ripper.c:18275-18281)._

After the header `|` (or a chaining `|`), an optional level digit `1`-`9` selects the command level, and an optional second digit `1`-`9` a sublevel. Three consequences the code makes exact:

- **`0` is never a level digit.** `!|0X` is a _level-0 command whose command character is `0`_ - not "level 0, command X". Level 0 is reached by writing no level digit at all.
- Nesting stops at two digits in SyncTERM's parser (level + sublevel), although the 2.00a4 grammar reserves up to nine level digits (`!|123456789<cmd>`).
- The command character is whatever single byte follows the level digits, and **need not be printable**: ESC (`0x1B`) is a real command character (`!|1<ESC>` RIP_QUERY, `!|9<ESC>` RIP_ENTER_BLOCK_MODE) (ripper.c:18289).

### Parameters

_Evidence: 2.00a4 rules 9-10._

Zero or more parameters follow the command character, with no delimiters between numeric fields. Numeric parameters are fixed-width [MegaNums or UltraNums](1.2-math-and-coordinates.md) per the current base math. A text parameter, if present, is always last. The last numeric parameter may be shortened by dropping leading zeros (`!|c01` → `!|c1`; at least one digit must remain), and a trailing _reserved_ parameter may be omitted entirely (assumed `0`).

### Chaining, Continuation, and Line Endings

_Evidence: 2.00a4 rules 4-5, 13; SyncTERM (ripper.c:18556-18607); corpus._

- **`|` chains commands**: a bare `|` dispatches the buffered command and starts the next on the same line (ripper.c:18583-18602). Some commands ([RIP_ENTER_BLOCK_MODE](5.5-file-transfer-and-queries.md#rip_enter_block_mode) and a few others) must stand alone.
- **CR dispatches** the pending command and returns the parser to idle (ripper.c:18561-18580) - _unless_ the buffer ends in an **odd** number of backslashes, in which case the final `\` is stripped and the command continues on the next physical line (ripper.c:18563-18576). This is the classic line-continuation rule for keeping long commands inside right margins; a literal backslash at end-of-line must be doubled (`\\`), and continuation after a literal backslash needs three (`\\\`).
- **LF is unconditionally swallowed** mid-command (ripper.c:18557-18559) - which is why the CRLF line endings throughout the RIPtel corpus (the 1.54 spec said bare CR) parse identically.

### Escaping in Text Parameters

_Evidence: 2.00a4 rules 11, 14; SyncTERM (ripper.c:18204-18227)._

`!` and `|` appear literally in text parameters by quoting with backslash (`\!`, `\|`); a literal backslash is `\\`. SyncTERM's preprocessor (`cb_unescape`) makes `\|` a literal pipe in arguments (held as a placeholder through argument slicing, ripper.c:18291-18298) and collapses `\X` to `X` for any other character; at feed time an odd number of trailing backslashes before a `|` marks that pipe as data, not a command boundary (ripper.c:18583-18596). Host-command and text-variable metacharacters inside text parameters - `$`, `[`, `]`, `(`, `)` - must likewise be quoted (`\$Name\$`) to avoid interpretation.

### Raw Text and Error Handling

_Evidence: 2.00a4 rules 6, 15; corpus._

A line that does not begin with an introducer is raw text, routed to the current [text window](1.4-terminal-ansi-view.md) (or consumed as column content inside a flowed-text region - see [3.1 Column Text System](3.1-column-text-system.md)). Unrecognized text _after_ a complete command on the same line is ignored - the command still executes. A command with too much or too little data is "hopelessly corrupted" and discarded; the parser resynchronizes at the next `|`.

## Description of RIPscrip Command Levels

_Added in RIPscrip v2.A1._

_Evidence: 2.00a4._

As previously described, RIPscrip is composed of ten different levels of commands. The distribution of commands over different levels is done in a rather organized fashion based on command type. Each level of command in general, is progressively higher level in concept. For example, level 0 commands are the most basic building blocks of RIPscrip (eg, graphical primitives, protocol setup, etc). Level one commands are simple user interface objects. Level 2 commands are higher level still in that they deal with context swapping issues. At the highest level, level-9, we deal with binary transfer modes like file transfer protocols, etc. A more formal definition of the currently used levels are:

| Level | Description |
| --- | --- |
| 0 | Lowest-level RIPscrip primitives. Simple graphical drawing primitives, low-level RIPscrip protocol mode settings, etc. |
| 1 | Simple user interface objects (buttons, mouse fields, clipboard slots, formatted text regions). This level consolidates one or more simple building blocks from level 0 and also introduces more abstract user interface objects (eg, mouse fields). |
| 2 | Basic context switching information (switching styles, and other window or context senstive commands. |
| 3 | Basic time-related commands (baud rate emulation and delay commands). |
| 4 | Open for future development |
| 5 | Open for future development |
| 6 | Open for future development |
| 7 | Open for future development |
| 8 | Open for future development |
| 9 | Binary related data transfer functions (ie, block protocol modes, UU-Encoding, etc). |

Each level/character pair is a unique command: `!|L`, `!|1L`, and `!|15L` are three different commands. The consolidated 3.x inventory across all levels is [9.0 Command Reference](9.0-command-reference.md).

## ANSI Sequences (Auto-Sensing)

_Evidence: 2.00a4; HLP (RIPTEL.HLP FAQ); SyncTERM (ripper.c:7619, 18437-18470)._

RIPscrip predominantly uses non-ANSI command sequences. In a couple of situations though, an ANSI-like sequence is allowed to perform a specific function. There are currently four separate escape sequences defined in the RIPscrip protocol to perform various actions. They are as follows:

| Sequence | Effect |
| --- | --- |
| `ESC[!` | Query RIPscrip version - the terminal replies with its version string (below) |
| `ESC[0!` | Same as `ESC[!` |
| `ESC[1!` | Disable all RIPscrip processing (sequences render as raw text) |
| `ESC[2!` | Enable RIPscrip processing |

Hosts auto-sense a RIP terminal by sending the query at login and sniffing for the reply; a non-RIP terminal ignores the sequence. The reply format is the literal text `RIPSCRIP` followed by version digits in **`MMmmrr`** form (2-digit major, minor, revision), optionally followed by a 2-character **`pp`** vendor/patch suffix (vendor code + sub-version, per the 1.54 convention - for v1.54, RIPterm with Vendor Code "1" returned `RIPSCRIP015410`). _(v1.54)_

Valid Vendor Codes were:

| CODE | VENDOR                                              |
| ---- | --------------------------------------------------- |
| 0    | Generic RIPscrip terminal (vendor unknown)          |
| 1    | RIPterm (from TeleGrafix Communications)            |
| 2    | Qmodem Pro (from Mustang Software, Inc)             |
| 3    | deltaComm Development (Telix) _(v2.A1)_             |
| 4    | Qmodem Pro for Windows (Mustang Software) _(v2.A1)_ |

> **NOTE:** This method of vendor determination is obsolete in RIPscrip 2.0 and later. You still use this escape sequence to detect RIPscrip capability, but to determine the specific terminal program or manufacturer, use the `$TERMINFO()$` text variable. To determine specific capabilities of the terminal, use the `$IFS()$` text variable (Is Function Supported). To determine the current language that the terminal is running in, use the `$LANGUAGE$` text variable (see [5.1 Text Variables](5.1-text-variables.md)). _(v2.A1, revised v2.A4)_

### The 3.x-Era Replies

_Evidence: HLP (RIPTEL.HLP FAQ); SyncTERM (ripper.c:7619, 18437-18470)._

The 3.x-era replies on record:

- **`RIPSCRIP03000`** - the reply RIPtel's own FAQ documents (RIPTEL.HLP: the string appears on the login line when MajorBBS/WorldGroup hosts time out waiting for it; servers allow only ~1-1.5 s). Read as major 03, minor 00, revision 0 - 13 bytes, without the vendor suffix.
- **`RIPSCRIP030001`** - SyncTERM's 14-byte reply (`ripver[]` at ripper.c:7619, sent without CR/LF via `conn_send(…, 14, 1000)` at ripper.c:18447): major 03, minor 00, revision 01. For comparison, its RIPv1 reply is `RIPSCRIP015410` (v1.54, vendor 1, sub-rev 0).

Host software probing for "any RIP 3.0" should therefore match on the prefix `RIPSCRIP03` rather than a fixed length. The same string is available to host scripts as the **`$RIPVER$`** text variable (RIPTEL.HLP's own example for it is `RIPSCRIP015300`).

Two behavioral notes from SyncTERM. First, its `ESC[1!` handling is a one-way door - once disabled, its parser never sees the `ESC[2!` that should re-enable it (ripper.c:18453-18459). **This is a SyncTERM bug, not a protocol delineation**: the language defines disable (`ESC[1!`) and enable (`ESC[2!`) as a reversible pair, and a conforming terminal must resume RIPscrip processing when it receives `ESC[2!`. Do not treat SyncTERM's inability to restart RIP processing as license to drop the feature - implementations should keep watching for `ESC[2!` while disabled. Second, the RIP version SyncTERM answers with is per-BBS _configuration_, not negotiated from the wire.

> **Editor's note - the RIPterm 2.30 product era:** every shipping 2.30-generation RIPterm binary - Professional 2.0, 2.20.01, and 2.30 - carried the same literal auto-sense response string `RIPSCRIP020000`: version 02.00 with the trailing vendor/sub-version digits zeroed. The reported language level never advanced past 2.00.00 through the end of the RIPterm line in October 1997, even as the product versions did; the jump to `RIPSCRIP03000…` arrives with the RIPtel-era 3.0 driver documented here (see [1.0 Introduction](1.0-introduction.md#the-30-identity)).

## Scene Header Segments

_Evidence: HLP._

The 3.0 engine formalizes the 2.A1 [RIP_HEADER](#rip_header) idea into **scene header segments** - a structured header at the start of a scene that declares the environment the scene expects, so the terminal can validate and configure before drawing. RIPSCRIP.HLP's error-string family maps its contents:

- **Per-table segments** carrying flags and entry numbers for each object class: button style, graphics style, drawing port, text window, color palette, environment, mouse field, **audio**, and graphics screen (see [7.1 Data Tables](7.1-data-tables.md)).
- An **environment segment** carrying the coordinate size ("Invalid coordinate size in environment header segment") and the direct-RGB bit count ("Invalid direct RGB bit count in environment header segment").
- **General header flags** ("Invalid general header flags").
- A **revision code** identifying the RIPscrip revision of the code that follows ("Invalid RIPscrip revision code").

No wire-format example of a header segment has been recovered - the RIPtel demos use the explicit prologue commands instead (below) - so the segment encoding itself remains undocumented _(hypothesis: a parameterized RIP_HEADER-style command, per the 2.A1 design)_.

## Wire-Format Observations from the Corpus

_Evidence: corpus._

The 116 TeleGrafix-authored RIPtel demo scripts are the best available picture of real 3.x on the wire:

- **SOH marks scene start.** 111 of 116 files begin their _first_ command line with SOH + `|`, then use `!|` for every subsequent line - SOH apparently flags start-of-scene to the 3.0 stream parser, while `!|` remains the 1.54-compatible introducer. (Three files invert the pattern, nearly all-SOH.)
- **The standard prologue** opens 90+ files: `J10|n2000|M08|fZKQO` - base math 36, 2-digit coordinates, 8-bit palette color mode, 1280×960 world frame (see [1.2 Math & Coordinates](1.2-math-and-coordinates.md)).
- **Trailing text after fixed-length arguments is tolerated** and used as inline commentary - the driver stops reading once the fixed fields are consumed: `!|fZKQO                 Set world coordinats to 1280x960`. Chained `!|command|! comment` forms (the `!` comment opcode) are ubiquitous.
- **Typo tolerance is high.** A missing `!` introducer (`|1<ESC>0000$COMPAT$`, CURVES.RIP), separator lines `!|----` that accidentally parse as the `-` opcode with dash arguments (`-` reads as MegaNum 0), and bare `!|` no-op lines all pass through the shipping driver without visible failure. Robust parsers should degrade as gracefully.
- **Line endings are CRLF**, with `\` continuation across physical lines for long vertex lists (POLYPOLY.RIP). See [6.0 Writing 3.x .RIP Files](6.0-writing-rip-files.md) for authoring conventions.

## Annotated Wire Examples

### The standard prologue, decoded

_Evidence: corpus (90+ files)._

Nearly every TeleGrafix scene opens with the same chained sequence:

```text
!|J10|n2000|M08|fZKQO
```

| Piece | Command | Meaning |
| --- | --- | --- |
| `!\|` | - | line introducer + command delimiter |
| `J10` | [RIP_SET_BASE_MATH](1.2-math-and-coordinates.md#rip_set_base_math) | base math ← 36 (`10` base-36 = 36): MegaNums |
| `\|n2000` | [RIP_SET_COORDINATE_SIZE](1.2-math-and-coordinates.md#rip_set_coordinate_size) | coordinates ← 2-digit fields |
| `\|M08` | [RIP_SET_COLOR_MODE](2.0-color-modes-and-palettes.md#rip_set_color_mode) | 8-bit palette color mode |
| `\|fZKQO` | [RIP_SET_WORLD_FRAME](1.3-world-view-virtual-canvas.md#rip_set_world_frame) | world frame ← 1280×960 (`ZK`=1280, `QO`=960) |

The order matters: the scene pins its numeric conventions _before_ any coordinate-bearing command arrives.

### A real scene opening (DRAGON.RIP)

_Evidence: corpus (DRAGON.RIP; annotations editorial)._

```text
\x01|!                                    SOH scene-start + comment (no text)
!|*                                       RIP_RESET_WINDOWS - clean slate
!|1\x1b0000$-=NO_WIPES=Disabled$          query cmd sets variable NO_WIPES=Disabled
!|1\x1b0000$SBAROFF$                      hide the status bar
!|w0000000000                             RIP_TEXT_WINDOW - zero-size (off)
\x01|1\x1b0000$DTW$                       disable text window
\x01|1\x1b0000$COFF$                      cursor off
\x01|1\x1b0000$RESET(OVERFLOW)$           clear column-overflow state
\x01|n2000                                2-digit coordinates
\x01|M08                                  8-bit palette mode
\x01|W00                                  RIP_WRITE_MODE - COPY
\x01|fZKQO                                world frame 1280x960
\x01|2P10000ZKQO00030000                  RIP_DEFINE_PORT - offscreen port 1, 1280x960
\x01|J10                                  base math 36 (MegaNums)
\x01|1b0000HS0Y000G000000STRIP6.BMP       RIP_LOAD_BITMAP at (0,0), 640x34 region
\x01|c0F                                  draw color 15
\x01|y0000BW0X040000001a1a000000dixon     extended font style - outline font "dixon"
```

(`\x01` = SOH, `\x1b` = ESC; both are literal single bytes on the wire. Lines end CRLF. Note the mixed introducers - SOH mid-scene is legal - and `$…$` terminal-control variables doing setup work alongside drawing commands.)

### Chaining, escaping, and continuation

_Evidence: 2.00a4; corpus; SyncTERM (ripper.c:18204-18232, 18563-18576)._

```text
!|c0F|=00000001|S010F                     three commands, one line: color,
                                          line style, fill style
!|@0A0ASay \| for a pipe                  \| = literal pipe inside a text
                                          parameter (not a delimiter)
!|p04000A000A0M0M2S0M2S000A00\            RIP_FILL_POLYGON with the vertex
0A                                        list continued across lines: odd
                                          trailing backslash before CR
!|! any prose after the bang-pipe-bang    comment command - ignored by the
                                          terminal, ubiquitous in the corpus
```

### A minimal constructed scene

_(Constructed example - not from the corpus; commands and field widths follow the entries in this reference.)_

```text
!|*|J10|n2000|M08|fZKQO                   reset + standard prologue
!|c0F|=00000001|S010F                     white pen, solid 1px line, solid fill
!|K05052S1U                               filled rectangle (5,5)-(100,66)
!|Y02000909                               font style: small stroked font, 9x9
!|@0F0PHello, RIPscrip 3.0                text at (15,25)
!|1b000000000000000000LOGO.BMP            bitmap at (0,0), unscaled
!|#                                       RIP_NO_MORE - scene complete
```

## How commands are documented

_Evidence: editorial; format follows 2.00a4._

The chapters of this reference detail the reconstructed RIPscrip 3.x command set (the consolidated index is [9.0 Command Reference](9.0-command-reference.md)). Each command has these aspects:

- **SYMBOL** - the symbolic constant that is referenced in RIPscrip documents. This is the universal name for the command. _(v2.A3)_

- **FUNCTION** - A short description of the command.

- **LEVEL** - The Command Level. Sub-levels (if any) are represented with decimal points (eg, 1.3.5 for Level-1, Sub-level 3, Sub-Sub-level 5). This is for discussion purposes only. The decimal points are never part of the actual command.

- **COMMAND** - The character identifying the command

- **ARGUMENTS** - The arguments or parameters for the command. Commands that do not require any parameters after the command type character are shown here as "\<none\>". Each parameter is shown in the order it appears in the command, and is represented by a name. If a parameter is numeric, it is followed by a width specifier indicating how many meganum or ultranum digits the parameter consists of (e.g., ":2" means a 2-digit number, or a value between 0 and 1295 for meganums, or 0 and 4095 for ultranums). If a parameter does not have a width specifier, it is by default a text parameter, and should be the last parameter of the command.

  If a command is variable length (see [POLYGON](2.3-shapes-and-fills.md#rip_polygon)), then it will appear with an ellipe (...), meaning that the command repeats the specific parameters a variable number of times. _(v2.A2)_

  If the parameter is a variable-width coordinate that can be set by the [RIP_SET_COORDINATE_SIZE](1.2-math-and-coordinates.md#rip_set_coordinate_size), or via the [RIP_HEADER](#rip_header) commands, then the parameter will be followed by a coordinate specifier (e.g., ":XY" means that the parameter is a variable-width coordinate). _(v2.A2, revised v2.A3)_

  If the parameter is a color parameter whose format is determined by the [RIP_SET_COLOR_MODE](2.0-color-modes-and-palettes.md#rip_set_color_mode) command, (ie, the parameter switches between "color mapping mode" or "direct RGB encoding" mode), then a color mode specifier will come after the parameter name (e.g., ":CM" indicates this parameter uses the current color mode). _(v2.A3)_

  Some commands do not allow color parameters to switch modes based on RIP_SET_COLOR_MODE. These exceptional commands document these exceptions and the :CM specifier will not be present. _(v2.A3)_

- **FORMAT** - This represents the format of the command, with the starting `!|`, the level digits, the command type character, and the parameter list, with the parameter names in angle brackets. (These parameters are spaced apart, but these spaces never appear in the physical commands.)

- **EXAMPLE** - An actual example of the RIPscrip command. In this reconstructed edition, examples are drawn from the RIPtel corpus wherever one exists.

- **DRAW COLOR** - If YES, then this command uses or affects the current Drawing Color.

- **BACK COLOR** - If YES, then this command uses (or affects) the current background pen drawing color. _(v2.A1)_

- **LINE STYLE** - If YES, then this command uses or affects the current Line Style Pattern.

- **FILL COLOR** - If YES, then this command uses or affects the current Fill Color.

- **FILL PATRN** - If YES, then this command uses or affects the current Fill Pattern.

- **WRITE MODE** - If YES, then this command will take advantage of the current Write Mode (eg, COPY, or XOR).

- **FONT STYLE** - If YES, then this command uses or affects the current Font Style/size/orientation. _(v2.A3)_

- **VIEWPORT** - If YES, then this command adheres to the graphical viewport (draws inside it). Any RIPscrip command that adheres to the graphical viewport will be drawn (when received) only if the viewport is activated. If the viewport is deactivated, then the command is parsed, but completely ignored. _(v1.54, revised v2.A4)_

- **USES PORT** - If YES, then this command adheres to, is affected by, or modifies the definition of a [port](7.0-drawing-ports.md). _(v2.A3)_

- **BASE MATH** - Indicates which base math this command responds to. The possible settings are N/A (does not apply), Meganums (uses meganums ONLY), Ultranums (uses Ultranums ONLY), and Current (uses current base math setting as set by either RIP_HEADER or [RIP_SET_BASE_MATH](1.2-math-and-coordinates.md#rip_set_base_math)). _(v2.A2)_

In addition - because this is a reconstructed edition - every command entry carries an **_Evidence:_** line naming the sources for that command: `2.00a4`, `HLP` (the RIP_* name in the 3.0.7 inventory), `corpus` (with file names), and/or `SyncTERM` (with ripper.c line cites). Commands attested only by a single source, and argument layouts inferred rather than documented, are flagged in the entry.

## RIP_HEADER

_Added in RIPscrip v2.A1._

_Evidence: 2.00a4; HLP (header-segment error strings - see [Scene Header Segments](#scene-header-segments)) - not observed in the RIPtel demo corpus, not in SyncTERM._

_Header command for subsequent RIPscrip sequence_

|               |                            |
| ------------- | -------------------------- |
| **Level**     | 0                          |
| **Command**   | `h`                        |
| **Arguments** | `revision:2 flags:4 res:2` |

**Format:** `!|h <revision> <flags> <res>` **Example:** `!|h010A0100`

**Attributes used:** Port, Base Math (Ultranums only)

This command was introduced in RIPscrip 2.0. It is specifically designed with two purposes in mind. First, it is defined to provide a consistent method for determining the revision of RIPscrip that is to follow in subsequent RIPscrip code (up to a [RIP_NO_MORE](#rip_no_more) command). Second, it provides a way of performing many different kinds of reset operations (if any) in one command - much more flexible than the older [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) command. This command has the ability to set many states and situations for subsequent RIPscrip code (whether MegaNums are to be used, or UltraNums, what gets reset and what doesn't, etc).

The `<revision>` code of this command defines the revision of RIPscrip code that is to follow. The valid defined revisions are as follows:

| Revision | Description           |
| -------- | --------------------- |
| 00       | RIPscrip 1.54.00 code |
| 01       | RIPscrip 2.00.00 code |

The real heart of this command is the `<flags>` parameter. This field defines all of the attributes of the header command other then the revision field. The possible values which may be combined in this parameter (OR'ed together) are as follows:

| Value | Description |
| --- | --- |
| 0 | Do nothing |
| 1 | Use MegaNums for subsequent RIPscrip code |
| 2 * | Use UltraNums for subsequent RIPscrip code |
| 4 * | Auto-set world coordinate frame |
| 8 | Set world frame to 640x350 (backward compatible mode). NOTE: This flag should be used in revision "00" code. |
| 16 | Perform a hard reset - this resets everything. This includes clearing all data backup area, even if entries are protected. The entry is protected, then cleared. |
| 32 * | This performs a soft reset. The screen is cleared, all viewports are reset and viewport slot 0 is made full screen, text windows are deleted and text window 0 is made full screen. All resident queries are deleted, graphical style slots are erased as are the button style slots. This is identical in nature to the RIP_RESET_WINDOWS. |
| 64 | Clears port data table |
| 128 | Clears resident queries only |
| 256 | Clears mouse/button definitions only |
| 512 | Clears all data save slots and resets stack pointers |
| 1024 | Clears all base save areas |
| 2048 | Clears and stops any playing sound/music |
| 4096 | Clears the screen to background color (usually black) |
| 8192 | Resets all viewports of all drawing ports to the full size of their respective ports (no erasing performed). |
| 16384 | Clears all text window data table entries and makes entry 0 full screen in default text (no window clearing performed) |
| 32768 | Clears all graphical style data table entries |
| 65536 | Clears all button style data table entries |
| 131072 | Resets all palette data table entries to defaults |
| 262144 | All existing viewports are erased. If combined with flag 8192, then this is done first, then flag 8192 is executed. |
| 524288 | All existing text windows are erased. If combined with flag 16384, then this is done first, then flag 16384 is executed. |
| 1048576 * | Disables all mouse/keyboard input (discards) until a RIP_NO_MORE command is encountered thus signifying the end of a RIPscrip sequence. This prevents the user from accidentally interrupting the data stream with keyboard activity. The mouse cursor should be changed to something like an hourglass or disabled entirely. If no RIP_NO_MORE is found and no RIPscrip or raw text data is being received, then a RIP_NO_MORE should be assumed after some suitable timeout (up to the developer's discretion). |

**NOTE:** Items marked with a `*` are recommended defaults.

As you can see, the `<flags>` parameter allows you to reset only segments of things that you want to reset giving you considerable flexibility in starting off RIPscrip scenes.

Most of the flag options are fairly self-explanatory. Some mention should be made to several of them. Note that the flags described above are grouped into logically related flag groups. Flags 1 and 2 are mutually exlusive meaning only "1" or "2" may be used, but not both. Choosing either flag 1 or 2 resets coordinate sizes to 2 bytes.

Flag 4 requires some explanation. Auto-setting the world coordinate frame (WCF) will auto-set the world coordinate frame to a set of high-resolution world coordinates. The exact choices of coordinates chosen depend on whether you specified UltraNums or MegaNums. If you specify flag 4, then you must specify either flag 1 or flag 2 to determine which base math to use. MegaNums set the width of the world coordinate frame to 1280, and the WCF height to 960. This provides for a square world frame pixels. If UltraNums are used, then the width of the world frame is set to 4096 and the height is set to 3072. Again, this provides for square world frame pixels. If you physically need a larger world frame then you either need to alter the base math setting explicitly or alter the X/Y coordinate parameter size (see [1.2 Math & Coordinates](1.2-math-and-coordinates.md)).

Most video displays have a 4:3 width to height pixel ratio. For example, 640x480 is 4:3, 1024x768 is 4:3, etc. Note that 1280x1024 is NOT a 4:3 ratio (the 4:3 ratio for 1280 would be 1280x960.) _(v2.A2)_

The Hard Reset option (flag 16) will perform a complete reset of the RIPscrip environment. This is equivalent to choosing flags 64 through 131072. In effect, this clears everything including data save slots and the base save areas.

The Soft Reset option (flag 32) will perform a reset that is identical in nature to the RIP_RESET_WINDOWS reset. This is equivalent to choosing flags 1, 8, 64, 128, and 2048 through 131072. This doesn't delete any data save slots or base save areas, doesn't intentionally affect the world frame except that it sets it to 640x350, and chooses MegaNums as the numbers of choice.

**NOTE:** This command ALWAYS sets the mouse cursor back to the default arrow pointer unless the "disable mouse input" flag is used whereas the mouse will be temporarily changed to an hourglass or disabled entirely until a RIP_NO_MORE. After this, then the pointer will be reset back to an arrow. See [RIP_SET_MOUSE_CURSOR](4.2-mouse-fields-and-pointer.md#rip_set_mouse_cursor) for details.

**3.x status:** the 3.0 driver clearly retains and extends this mechanism even though the demo corpus (local scene files) never sends the command itself: RIPSCRIP.HLP's error strings describe the **header segments** listed [above](#scene-header-segments), carrying flags plus entry numbers for the object tables plus environment settings. The demos achieve the same effect piecewise with `!|*` plus the `J10|n2000|M08|fZKQO` prologue. _Evidence: HLP; corpus._

## RIP_NO_MORE

_Evidence: 2.00a4; corpus (287 uses in 95 files); SyncTERM (ripper.c:13315)._

_End of RIPscrip Scene_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `#`      |
| **Arguments** | \<none\> |

**Format:** `!|#` **Example:** `!|#`

**Attributes used:** none

This command indicates that RIPscrip commands are complete. This allows the terminal program to activate Mouse Regions, or respond to queued up Mouse Clicks without disturbing the natural flow of the script transmission.

For noise-immunity, the Host should transmit three or more RIP_NO_MORE command consecutively to make sure the message gets to the terminal. The terminal should also time-out if no data is received for a while, and assume RIP_NO_MORE.

The actual duration of the "time-out" is entirely up to the implementor of their terminal program. A good recommended setting would be at least an entire second or more after the receipt of the last RIPscrip command. Raw ASCII/ANSI text does not contribute to the time-out in any way. Only an actual RIPscrip command could cause the time-out counter to be reset (thus starting the time-out countdown all over again). Timing-out is not a pre-requisite to supporting RIPscrip. It is a highly desirable feature to do this, but it is not required. _(v1.54)_

This command also re-activates user input previously disabled with a [RIP_HEADER](#rip_header) command. This is useful to prevent the user from clicking on buttons before the scene is completely drawn. See the RIP_HEADER command for more details on this mode of operation. _(v2.A1)_

Nearly every RIPtel demo scene ends with one (287 uses in 95 of 116 files). _Evidence: corpus._

## RIP_COMMENT

_Added in RIPscrip v2.A2._

_Evidence: 2.00a4; corpus (1,683 comment commands across the RIPtel demos, 305 with prose)._

_Put in a comment as part of a RIPscrip sequence_

|               |             |
| ------------- | ----------- |
| **Level**     | 0           |
| **Command**   | `!`         |
| **Arguments** | `string...` |

**Format:** `!|!This is a comment` **Example:** `!|!Show RIP_SKEWED_OVAL`

**Attributes used:** Base Math (N/A)

A comment may be embedded inside a RIPscrip file. A comment is one line or longer in length. A comment is a special case of a RIPscrip command letter. In this case, it is the command letter "!". If a "!" is encountered right after a "!|", a "SOH |" or an "STX |" sequence, then the remainder of the command line is a comment. Comments may be line-continued with backslashes just like regular RIPscrip commands can. Some examples of comments might be:

```text
!|!This is a comment

!|c0F|!Set the color to white|c00|!Set the color to black

!|c0F|!this is a very long, continued\
comment line.  Line-continued comments\
adhere to standard RIPscrip line continuation rules
```

Note that the second example shows a comment starting after a legitimate RIPscrip command (set color). This is valid.

The RIP_COMMENT is treated exactly like any other RIPscrip command for the purposes of parsing RIPscrip commands, EXCEPT that the string is explicitly ignored for [text variables](5.1-text-variables.md). Any use of `|` will be interpreted as the beginning of the next command, and `\` will interpreted as a line continuation. No other characters need be escaped out.

In the RIPtel corpus, comments are the single most valuable evidence stream: `!|command|! comment` chains are ubiquitous, and TeleGrafix's authors used comments to name six otherwise-undocumented drawing primitives outright (NEWCMDS.RIP) and to leave positional field-layout cribs above complex commands. _Evidence: corpus._

## RIP_GROUP_BEGIN

_Added in RIPscrip v2.A2._

_Evidence: 2.00a4 - not in the RIPSCRIP.HLP inventory, not observed in the RIPtel demo corpus, not in SyncTERM._

_Start a grouping of RIPscrip commands_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `(`      |
| **Arguments** | \<none\> |

**Format:** `!|(` **Example:** `!|(`

**Attributes used:** none

This command has one special usage, that is to group blocks of commands together into logical groupings. This has no functional use to a terminal program, but to a paint program, it can be used to perform block moves of commands from one area in a scene to another. In order to accomodate this, a standardized method of doing group definitions is being created.

To specify a command grouping, specify the commands like this:

```text
!|(

  ...
  ... RIPscrip commands
  ...

!|)
```

When putting RIPscrip data files online on a host, you would typically want to remove groupings for efficiency, although this is not required. A terminal program should just ignore RIP_GROUP_BEGIN and [RIP_GROUP_END](#rip_group_end) commands, at it has no conceivable use for the information at this time.

Also note that a group may consist of several groups and commands. In other words, groups may be nested inside of each other for the purpose of bundling them together.

**NOTE:** Any currently active group definitions are "closed" when a [RIP_NO_MORE](#rip_no_more) command is encountered in a paint program or some kind of conversion utility that uses groups. _(v2.A3)_

The 2.00a4 spec's suggestion to strip groupings from files placed online is consistent with their total absence from the shipping demo corpus. _Evidence: corpus._

## RIP_GROUP_END

_Added in RIPscrip v2.A2._

_Evidence: 2.00a4 - not in the RIPSCRIP.HLP inventory, not observed in the RIPtel demo corpus, not in SyncTERM._

_End a grouping of RIPscrip commands_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `)`      |
| **Arguments** | \<none\> |

**Format:** `!|)` **Example:** `!|)`

**Attributes used:** none

This command ends a group of RIPscrip commands. See [RIP_GROUP_BEGIN](#rip_group_begin) for a detailed explanation.

---

[◀ Prev: 1.0 Introduction](1.0-introduction.md) · [Contents](README.md) · [Next: 1.2 Math & Coordinates ▶](1.2-math-and-coordinates.md)
